# pxsstray

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  roadmap.txt
pxsstray/: _version.py  main.py  run.py  trayMenu.py  xset.py
src/pxsstray/: main.py  xset.py
tests/: test_run.py  test_xset.py
