[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pxsstray"
dynamic = ["version"]
authors = [
  { name="Sam Coulter", email="sam.w.coulter@gmail.com" },
]
description = "A small example package"
readme = "README.md"
dependencies = [
  "pyside6",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Environment :: X11 Applications",
    "Topic :: Desktop Environment :: Screen Savers",
    "Topic :: Utilities"
]
# license = "MIT"
# license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
pxsstray = "pxsstray.main:run"

[tool.setuptools_scm]
version_file = "pxsstray/_version.py"
